<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/statsFragment">

    <fragment
        android:id="@+id/bmiFragment"
        android:name="com.example.healthplus.BmiFragment"
        android:label="@string/bmifragment"
        tools:layout="@layout/fragment_bmi" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.healthplus.ProfileFragment"
        android:label="@string/profilefragment"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/foodFragment"
        android:name="com.example.healthplus.FoodFragment"
        android:label="@string/foodfragment"
        tools:layout="@layout/fragment_food" />
    <fragment
        android:id="@+id/calorieFragment"
        android:name="com.example.healthplus.CalorieFragment"
        android:label="@string/caloriefragment"
        tools:layout="@layout/fragment_calorie" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.healthplus.HomeFragment"
        android:label="@string/homefragment"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/statsFragment"
        android:name="com.example.healthplus.StatsFragment"
        android:label="@string/statsfragment"
        tools:layout="@layout/fragment_stats" />
</navigation>