<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single"
        >

        <item
            android:id="@+id/statsFragment"
            android:icon="@drawable/baseline_bar_chart_24"
            android:title="@string/stats"
            app:showAsAction="always"/>

        <item
            android:id="@+id/foodFragment"
            android:icon="@drawable/foodlookup"
            android:title="@string/foodfragment"
            app:showAsAction="always"/>

        <item
            android:id="@+id/bmiFragment"
            android:icon="@drawable/speedometer"
            android:title="@string/bmi"
            app:showAsAction="always"/>

        <item
            android:id="@+id/calorieFragment"
            android:icon="@drawable/fastfood"
            android:title="@string/calories"
            app:showAsAction="always"/>



    </group>

</menu>
