<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <!-- Year -->

    <EditText
        android:id="@+id/editTextYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:hint="@string/year"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFFFF"
        android:translationY="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/cm"
        android:translationY="16dp"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCM"
        app:layout_constraintStart_toEndOf="@+id/editTextCM"
        app:layout_constraintTop_toTopOf="@+id/editTextCM" />

    <!-- CM -->

    <EditText
        android:id="@+id/editTextKG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFFFF"
        android:translationY="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/length"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFFFF"
        android:translationY="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- KG -->

    <TextView
        android:id="@+id/textViewKG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/kg"
        android:translationY="16dp"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editTextKG"
        app:layout_constraintStart_toEndOf="@+id/editTextKG"
        app:layout_constraintTop_toTopOf="@+id/editTextKG" />

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/y"
        android:translationY="16dp"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editTextYear"
        app:layout_constraintStart_toEndOf="@+id/editTextYear"
        app:layout_constraintTop_toTopOf="@+id/editTextYear" />

    <!-- Spinner -->

    <!-- daily cals -->
    <Spinner
        android:id="@+id/spinnerOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:entries="@array/rutine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextKG" />

    <!-- button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOptions" />

    <TextView
        android:id="@+id/dailyCaloriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="508dp"
        android:text="@string/daily_calories"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- BorderLine -->
    <View
        android:id="@+id/borderLine"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dailyCaloriesText" />

    <!-- BorderLine -->


    <View
        android:id="@+id/borderLine2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fatLabel" />
    <!-- Protein Label -->

    <TextView
        android:id="@+id/proteinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein"
        android:textSize="16sp"
        android:paddingHorizontal="60dp"
        android:textColor="#FFFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/borderLine"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Carbs Label -->
    <TextView
        android:id="@+id/carbsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbs"
        android:textSize="16sp"
        android:paddingHorizontal="60dp"
        android:textColor="#FFFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/proteinLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Fat Label -->
    <TextView
        android:id="@+id/fatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat"
        android:textSize="16sp"
        android:paddingHorizontal="60dp"
        android:textColor="#FFFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/carbsLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>
