<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bakgrund"
    tools:context=".FoodFragment">



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="#40bc64"
        android:contentDescription="@string/presstoadd"
        android:src="@drawable/addicon" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <SearchView
            android:id="@+id/food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/search_view"
            android:backgroundTint="@color/cardview_light_background"
            android:hint="@string/search"
            android:iconifiedByDefault="false"
            android:inputType="text"
            android:maxWidth="500dp"
            android:padding="4dp"
            android:textColor="@color/whiteText" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/getFoodButton"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center">

                <RelativeLayout
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_button">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp"
                        android:src="@drawable/bg_button"
                        app:tint="#fff" />

                    <RelativeLayout
                        android:layout_width="65dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="6dp"
                        android:background="@drawable/bg_button">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            android:src="@drawable/search_icon"
                            app:tint="#fff"></ImageView>
                    </RelativeLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="65dp"
                        android:gravity="center"
                        android:text="@string/searchbutton"
                        android:textColor="#000"
                        android:textSize="20sp" />
                </RelativeLayout>
            </RelativeLayout>


        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/firstRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/cal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/sharp_corners"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/calorie"
                        android:textColor="@color/whiteText"
                        android:textSize="32sp" />


                    <TextView
                        android:id="@+id/fat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/sharp_corners"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/fat"
                        android:textColor="@color/whiteText"
                        android:textSize="32sp" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/secondRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/carb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/sharp_corners"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/carbs"
                        android:textColor="@color/whiteText"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/protin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/sharp_corners"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/protein"
                        android:textColor="@color/whiteText"
                        android:textSize="32sp" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/datatable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rouded_corners"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/foodNames"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingVertical="15dp"
                        android:paddingStart="25dp"
                        android:text="@string/fooddetails"
                        android:textColor="@color/whiteText"
                        android:textSize="20sp" />


                    <TextView
                        android:id="@+id/foodData"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingVertical="15dp"
                        android:paddingStart="20dp"
                        android:textColor="@color/whiteText"
                        android:textSize="20sp" />


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>