<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bakgrund"
    tools:context=".BmiFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bmiInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/whiteText"
        android:contentDescription="Press To Add To Your Daily Calorie"
        android:src="@drawable/infoletter"
        android:outlineAmbientShadowColor="@color/black"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.MyApp.FloatingButton"
        app:fabCustomSize="35dp"
        app:maxImageSize="20dp"
        android:padding="8dp"/>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bakgrund"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/weight_bmi"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/weight"
            android:importantForAutofill="no"
            android:inputType="number"
            android:backgroundTint="@color/whiteText"
            android:textColorHint="#AFAFAF"
            android:textColor="@color/whiteText"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="7dp"
            android:text="@string/kg"
            android:textColor="@color/whiteText"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/height_bmi"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/whiteText"
            android:gravity="center"
            android:hint="@string/height_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#AFAFAF"
            android:textColor="@color/whiteText"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/cm"
            android:textColor="#e3e3e3"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/age_bmi"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/whiteText"
            android:gravity="center"
            android:hint="@string/age"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#AFAFAF"
            android:textColor="@color/whiteText"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/year"
            android:textColor="#e3e3e3"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="1dp"
            android:layout_weight="1"
            android:id="@+id/buttonBmi"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_button"
                android:layout_height="60dp">



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/bg_button"
                    app:tint="#fff"
                    android:layout_margin="3dp"/>

                <RelativeLayout
                    android:layout_width="65dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/bg_button">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_calculate_24"
                        android:padding="10dp"
                        app:tint="#fff">
                    </ImageView>
                </RelativeLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="65dp"
                    android:gravity="center"
                    android:text="Calculate"
                    android:textColor="#000"
                    android:textSize="20sp"/>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_gravity="center|bottom"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_weight="1"
        android:text="" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <!-- Other views can be added here -->

        <com.github.anastr.speedviewlib.SpeedView
            android:id="@+id/speedView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            app:sv_centerCircleColor="#21a6f3"
            app:sv_centerCircleRadius="11dp"
            app:sv_endDegree="360"
            app:sv_indicator="TriangleIndicator"
            app:sv_indicatorColor="#21a6f3"
            app:sv_indicatorWidth="15dp"
            app:sv_maxSpeed="40"
            app:sv_minSpeed="0"
            app:sv_speedTextFormat="INTEGER"
            app:sv_speedTextSize="30dp"
            app:sv_speedTextColor="@color/whiteText"
            app:sv_speedometerMode="TOP"
            app:sv_speedometerWidth="50dp"
            app:sv_startDegree="180"
            app:sv_tickTextFormat="INTEGER"
            app:sv_unit="BMI"
            app:sv_unitSpeedInterval="15dp"
            app:sv_unitTextColor="@color/whiteText"
            app:sv_unitTextSize="20dp"
            app:sv_unitUnderSpeedText="true"
            app:sv_textSize="13dp"
            app:sv_marksNumber="0"
            app:sv_textColor="@color/whiteText"
            app:sv_withIndicatorLight="true"
            app:sv_indicatorLightColor="@color/whiteText"
            app:sv_withTremble="false" />

    </FrameLayout>

</LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>